fixed main nav size, letter-spacing hover etc...

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -476,9 +476,10 @@ body {
   background-color: rgba(0, 0, 0, 0.65);
   display: block;
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
-  padding-top: 60px;
+  padding-top: 40px;
   padding-bottom: 20px;
 }
 
@@ -494,7 +495,7 @@ body {
   display: block;
   width: 100%;
   margin: auto;
-  margin-bottom: 10%;
+  margin-bottom: 12%;
 }
 
 
@@ -503,7 +504,7 @@ body {
   position: relative;
   list-style: none;
   padding: 0;
-  width: 70%;
+  width: 64%;
   margin: auto;
   text-align: center;
 
@@ -513,23 +514,24 @@ body {
   position: relative;
   display: inline-block;
   text-align: center;
-  width: 6%;
-  margin-left: 2%;
-  margin-right: 2%;
+  padding: 2.25%;
+  box-sizing: border-box;
 }
 .all-container nav ul li a {
-  font-weight: lighter;
+  font-weight: normal;
   font-size: 13px;
   line-height: 18px;
+  letter-spacing: 1.3px;
   text-transform: uppercase;
   text-decoration: none;
-  color: white;
+  color: rgba(255, 255, 255, 0.7);
 }
 
 
 
 .all-container nav ul li a:hover {
-  font-weight: bold;
+  color: white;
+
 
 }
 
