--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -10,7 +10,7 @@
     width: 60%;
     margin: auto;
     margin-bottom: 40%;
-    margin-top: 25%;
+    margin-top: 28%;
     font-size: 70px;
     text-align: center;
     text-transform: uppercase;
